--- a/applications/dashboard/styleguide/section-7.html
+++ b/applications/dashboard/styleguide/section-7.html
@@ -73,6 +73,7 @@
                             <li><a href="section-13.html" class="nav-link">13.0: Toasters</a></li>
                             <li><a href="section-14.html" class="nav-link">14.0: Dropdowns</a></li>
                             <li><a href="section-15.html" class="nav-link">15.0: Panel Components</a></li>
+                            <li><a href="section-16.html" class="nav-link">16.0: The Hero</a></li>
                         </ul>
                     </div>
                 </div>
@@ -311,7 +312,7 @@ Set &#39;data-tj-main=&quot;true&quot;&#39; on a thead td or thead th element to
                                             </h3>
                                                 <div class="kss-box padded"><p>Styling for Table Jenga meta (when a table is collapsed on small screen sizes).</p>
 </div>
-                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;tj-meta&quot;&gt;
+                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;table-meta&quot;&gt;
   &lt;div class=&quot;table-meta-item&quot;&gt;
     &lt;span class=&quot;table-meta-item-label&quot;&gt;Roles: &lt;/span&gt;
     &lt;span class=&quot;table-meta-item-data&quot;&gt;Member, Moderator&lt;/span&gt;
@@ -323,7 +324,7 @@ Set &#39;data-tj-main=&quot;true&quot;&#39; on a thead td or thead th element to
 &lt;/div&gt;</pre>
                                                 </div> <!-- end kss-component-description -->
                                                 <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
-                                                <div class="kss-example padded-bottom"><div class="tj-meta">
+                                                <div class="kss-example padded-bottom"><div class="table-meta">
   <div class="table-meta-item">
     <span class="table-meta-item-label">Roles: </span>
     <span class="table-meta-item-data">Member, Moderator</span>
