--- a/applications/dashboard/styleguide/section-13.html
+++ b/applications/dashboard/styleguide/section-13.html
@@ -73,6 +73,7 @@
                             <li><a href="section-13.html" class="nav-link">13.0: Toasters</a></li>
                             <li><a href="section-14.html" class="nav-link">14.0: Dropdowns</a></li>
                             <li><a href="section-15.html" class="nav-link">15.0: Panel Components</a></li>
+                            <li><a href="section-16.html" class="nav-link">16.0: The Hero</a></li>
                         </ul>
                     </div>
                 </div>
