--- a/applications/dashboard/styleguide/section-3.html
+++ b/applications/dashboard/styleguide/section-3.html
@@ -74,6 +74,8 @@
                             <li><a href="section-14.html" class="nav-link">14.0: Dropdowns</a></li>
                             <li><a href="section-15.html" class="nav-link">15.0: Panel Components</a></li>
                             <li><a href="section-16.html" class="nav-link">16.0: The Hero</a></li>
+                            <li><a href="section-17.html" class="nav-link">17.0: Planks</a></li>
+                            <li><a href="section-18.html" class="nav-link">18.0: Breadcrumbs</a></li>
                         </ul>
                     </div>
                 </div>
