--- a/applications/dashboard/styleguide/section-5.html
+++ b/applications/dashboard/styleguide/section-5.html
@@ -322,6 +322,96 @@ appropriate aria-label or aria-labelledby attributes in these cases.</p>
 </form></div>
                                     </div>
                                 </section>
+                                <section class="kss-depth-3">
+                                    <div class="kss-component">
+                                        <div class="kss-component-description row full-border">
+                                            <h3 class="kss-title" id="5-1-4">
+                                            <span class="kss-ref badge pull-right">5-1-4</span> Input Groups (input-wrap-multiple)
+                                            </h3>
+                                                <div class="kss-box padded"><p>.input-wrap-multiple also works for other types of inputs. By default the inputs will take the same amount of space on the row.</p>
+</div>
+                                                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;form&gt;
+  &lt;ul&gt;
+    &lt;li class=&quot;form-group&quot;&gt;
+      &lt;div class=&quot;label-wrap&quot;&gt;
+         &lt;label&gt;Checkbox field with multiple options&lt;/label&gt;
+         &lt;div class=&quot;info&quot;&gt;Info text for field&lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;input-wrap input-wrap-multiple [modifier class]&quot;&gt;
+        &lt;input type=&quot;number&quot; value=&quot;0&quot; min=&quot;0&quot; class=&quot;form-control&quot;&gt;
+         &lt;select class=&quot;form-control&quot;&gt;
+          &lt;option value=&quot;hours&quot;&gt;hours&lt;/option&gt;
+          &lt;option value=&quot;days&quot;&gt;days&lt;/option&gt;
+          &lt;option value=&quot;weeks&quot;&gt;weeks&lt;/option&gt;
+          &lt;option value=&quot;months&quot;&gt;months&lt;/option&gt;
+        &lt;/select&gt;
+      &lt;/div&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/form&gt;</pre>
+                                                </div> <!-- end kss-component-description -->
+                                                <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+                                                <div class="kss-example padded-bottom"><form>
+  <ul>
+    <li class="form-group">
+      <div class="label-wrap">
+         <label>Checkbox field with multiple options</label>
+         <div class="info">Info text for field</div>
+      </div>
+      <div class="input-wrap input-wrap-multiple [modifier class]">
+        <input type="number" value="0" min="0" class="form-control">
+         <select class="form-control">
+          <option value="hours">hours</option>
+          <option value="days">days</option>
+          <option value="weeks">weeks</option>
+          <option value="months">months</option>
+        </select>
+      </div>
+    </li>
+  </ul>
+</form></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">The first element will take 1/3 and the second 2/3 (only meant when there are 2 elements on row)</span> <span class="pull-right"><code>.input-wrap-1_3</code></span></div>
+                                                    <div class="kss-example padded-bottom"><form>
+  <ul>
+    <li class="form-group">
+      <div class="label-wrap">
+         <label>Checkbox field with multiple options</label>
+         <div class="info">Info text for field</div>
+      </div>
+      <div class="input-wrap input-wrap-multiple input-wrap-1_3">
+        <input type="number" value="0" min="0" class="form-control">
+         <select class="form-control">
+          <option value="hours">hours</option>
+          <option value="days">days</option>
+          <option value="weeks">weeks</option>
+          <option value="months">months</option>
+        </select>
+      </div>
+    </li>
+  </ul>
+</form></div>
+                                                    <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">The first element will take 2/3 and the second 1/3 (only meant when there are 2 elements on row)</span> <span class="pull-right"><code>.input-wrap-2_3</code></span></div>
+                                                    <div class="kss-example padded-bottom"><form>
+  <ul>
+    <li class="form-group">
+      <div class="label-wrap">
+         <label>Checkbox field with multiple options</label>
+         <div class="info">Info text for field</div>
+      </div>
+      <div class="input-wrap input-wrap-multiple input-wrap-2_3">
+        <input type="number" value="0" min="0" class="form-control">
+         <select class="form-control">
+          <option value="hours">hours</option>
+          <option value="days">days</option>
+          <option value="weeks">weeks</option>
+          <option value="months">months</option>
+        </select>
+      </div>
+    </li>
+  </ul>
+</form></div>
+                                    </div>
+                                </section>
                                 <section class="kss-depth-2">
                                     <div class="kss-component">
                                         <div class="kss-component-description row full-border">
