Restructure most of quill renderer

--- a/tests/fixtures/editor-rendering/everything/output.html
+++ b/tests/fixtures/editor-rendering/everything/output.html
@@ -1,2 +1,1 @@
-<pre class="ql-syntax" spellcheck="false">$const = thing;
-</pre><p>Normal Text</p><p><em>Italic</em></p><p><strong>bold</strong></p><p><strong><em>bold italic</em></strong></p><p><s>Strike</s></p><p><a href="http://google.com" target="_blank">link</a></p><blockquote>Quote</blockquote><h1>H1</h1><h2>H2</h2><ul><li>bullet</li><li>bullet</li></ul><ol><li>Numbered</li><li>Numbered</li></ol><p><br></p><p class="ql-indent-1">indent</p>
+<p><strong>bold</strong>normal<em>italic</em><strong><em>bold-italic </em></strong><a href="https://google.com" target="_blank"><strong><em>go</em></strong>ogl<strong><em>elink</em></strong></a></p><p><br></p><p>Text after line breaks.<s>strike</s></p><p><br></p><p><br></p><p><br></p><p><s>Mutliple more breaks.</s></p>
