--- a/tests/fixtures/editor-rendering/embed-video/output.html
+++ b/tests/fixtures/editor-rendering/embed-video/output.html
@@ -1,4 +1,4 @@
-<p><br></p><div class="embed embedVideo"><div class="embedVideo-ratio" style="padding-top: 68.676%;"><button type="button" data-url="https://www.youtube.com/embed/wupToqz1e2g" aria-label="Video Title" class="embedVideo-playButton iconButton js-playVideo" style="background-image: url(https://i.ytimg.com/vi/wupToqz1e2g/hqdefault.jpg);">
+<p><br></p><div class="embed embedVideo"><div class="embedVideo-ratio" style="padding-top: 68.67599569429494%;"><button type="button" data-url="https://www.youtube.com/embed/wupToqz1e2g" aria-label="Video Title" class="embedVideo-playButton iconButton js-playVideo" style="background-image: url(https://i.ytimg.com/vi/wupToqz1e2g/hqdefault.jpg);">
     <svg class="embedVideo-playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 24 24">
         <title>Play Video</title>
         <path class="embedVideo-playIconPath embedVideo-playIconPath-circle" style="fill: currentColor; stroke-width: .3;" d="M11,0A11,11,0,1,0,22,11,11,11,0,0,0,11,0Zm0,20.308A9.308,9.308,0,1,1,20.308,11,9.308,9.308,0,0,1,11,20.308Z"></path>
