--- a/tests/fixtures/editor-rendering/all-blocks/output-client.html
+++ b/tests/fixtures/editor-rendering/all-blocks/output-client.html
@@ -1,4 +1,4 @@
-<h1>Block operations H1 Title here. Code Block next.</h1><code class="code-block code isBlock" spellcheck="false">/**
+<div class="ql-editor richEditor-text userContent" data-gramm="false" contenteditable="true"><h1><br></h1><h1>Block operations H1 Title here. Code Block next.</h1><code class="code-block code isBlock" spellcheck="false">/**
  *adds locale data to the view, and adds a respond button to the discussion page.
  */
 class MyThemeNameThemeHooks extends Gdn_Plugin {
@@ -10,18 +10,18 @@ class MyThemeNameThemeHooks extends Gdn_Plugin {
      * @param  Controller $sender The sending controller object.
      */
     public function base_render_beforebase_render_beforebase_render_beforebase_render_beforebase_render_before($sender) {
-        // Bail out if we&#039;re in the dashboard
-        if (inSection(&#039;Dashboard&#039;)) {
+        // Bail out if we're in the dashboard
+        if (inSection('Dashboard')) {
             return;
         }
 
         // Fetch the currently enabled locale (en by default)
         $locale = Gdn::locale()-&gt;current();
-        $sender-&gt;setData(&#039;locale&#039;, $locale);
+        $sender-&gt;setData('locale', $locale);
     }
 }
-</code><p><br></p><h2>H2 Here. Spoiler next</h2><div class="spoiler"><div contenteditable="false" class="spoiler-buttonContainer">
-<button class="iconButton button-spoiler js-toggleSpoiler">
+</code><p><br></p><h2>H2 Here. Spoiler next</h2><div class="spoiler isShowingSpoiler"><div contenteditable="false" class="spoiler-buttonContainer">
+<button disabled="" class="iconButton button-spoiler" type="button">
     <span class="spoiler-warning">
         <span class="spoiler-warningMain">
             <svg class="icon spoiler-icon">
@@ -32,18 +32,9 @@ class MyThemeNameThemeHooks extends Gdn_Plugin {
                 Warning:
             </strong>
             <span class="spoiler-warningAfter">
-                Click here to hide spoiler
+                This is a spoiler
             </span>
         </span>
-        <span class="spoiler-chevron">
-            <svg class="icon spoiler-chevronUp">
-                <title>▲</title>
-                <path fill="currentColor" d="M0,3.6c0-0.1,0-0.2,0.1-0.3l3.5-3.1C3.7,0,3.9,0,4,0c0.1,0,0.3,0,0.4,0.1l3.5,3.1C8,3.3,8,3.4,8,3.6s0,0.2-0.1,0.3C7.8,4,7.6,4,7.5,4h-7C0.4,4,0.2,4,0.1,3.9C0,3.8,0,3.7,0,3.6z"></path>
-            </svg>
-            <svg class="icon spoiler-chevronDown">
-                <title>▼</title>
-                <path fill="currentColor" d="M8,3.55555556 C8,3.43518519 7.95052083,3.33101852 7.8515625,3.24305556 L4.3515625,0.131944444 C4.25260417,0.0439814815 4.13541667,0 4,0 C3.86458333,0 3.74739583,0.0439814815 3.6484375,0.131944444 L0.1484375,3.24305556 C0.0494791667,3.33101852 -4.4408921e-16,3.43518519 -4.4408921e-16,3.55555556 C-4.4408921e-16,3.67592593 0.0494791667,3.78009259 0.1484375,3.86805556 C0.247395833,3.95601852 0.364583333,4 0.5,4 L7.5,4 C7.63541667,4 7.75260417,3.95601852 7.8515625,3.86805556 C7.95052083,3.78009259 8,3.67592593 8,3.55555556 Z" transform="matrix(1 0 0 -1 0 4)"></path>
-            </svg>
-        </span>
     </span>
-</button></div><div class="spoiler-content"><p class="spoiler-line">Some Spoiler content with formatting <strong>bold</strong> <em>italic </em><s>strike</s></p><p class="spoiler-line"><br></p><p class="spoiler-line"><br></p><p class="spoiler-line">Newlines above <a href="test link" target="_blank">Link</a></p><p class="spoiler-line">Another line</p></div></div><p><br></p><p>A blockquote will be next.</p><p><br></p><div class="blockquote"><div class="blockquote-content"><p class="blockquote-line">Some Block quote content<strong>bold</strong> <em>italic </em><s>strike</s></p><p class="blockquote-line"><s>More blockquote content</s></p></div></div><p><br></p><p><br></p>
+</button>
+</div><div class="spoiler-content"><p class="spoiler-line">Some Spoiler content with formatting <strong>bold</strong> <em>italic </em><s>strike</s></p><p class="spoiler-line"><br></p><p class="spoiler-line"><br></p><p class="spoiler-line">Newlines above <a href="test link" target="_blank">Link</a></p><p class="spoiler-line">Another line</p></div></div><p><br></p><p>A blockquote will be next.</p><p><br></p><div class="blockquote"><div class="blockquote-content"><p class="blockquote-line">Some Block quote content<strong>bold</strong> <em>italic </em><s>strike</s></p><p class="blockquote-line"><s>More blockquote content</s></p></div></div><p><br></p><p><br></p></div>
